--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,31 @@ header {
   line-height: 22px;
 }
 
+/*===== Video =====*/
+
+#video {
+  width: 100%;
+  position: relative;
+  padding-bottom: 56%;
+  padding-top: 30px;
+  height: 0px;
+  overflow: hidden;
+}
+
+.video-container{
+  width: 98%;
+  margin: 0px auto;
+}
+
+
+#video iframe{
+  position: absolute;
+  top: 0px;
+  left:0px;
+  width: 100%;
+  height: 100%;
+}
+
 /*===== About Styles=====*/
 
 #about {
