--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,7 @@ header {
   padding-top: 30px;
   height: 0px;
   overflow: hidden;
+  background-color: #bbb;
 }
 
 .video-container{
@@ -181,10 +182,9 @@ header {
 
 #video iframe{
   position: absolute;
-  top: 0px;
-  left:0px;
-  width: 100%;
-  height: 100%;
+  margin: 55px 120px;
+  width: 80%;
+  height: 80%;
 }
 
 /*===== About Styles=====*/
