--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@
 */
 /*===== Global Styles =====*/
 
+@import url("contact.css");
+
 body, html{
   margin: 0;
   padding: 0;
@@ -63,7 +65,7 @@ h5 {
 
 /*===== Header Styles =====*/
 
-header {
+#header {
   background-color: #CEC2AA;
   height: 100px;
 }
@@ -77,7 +79,8 @@ header {
 
 .logo h1 {
   text-align: center;
-  margin: 0;
+  font-size: 2em;
+  margin-top: 5px;
 }
 
 .menu {
@@ -171,7 +174,7 @@ header {
   padding-top: 30px;
   height: 0px;
   overflow: hidden;
-  background-color: #bbb;
+  background-color: #FFCC66;
 }
 
 .video-container{
@@ -217,12 +220,56 @@ header {
   background-color: #fff;
 }
 
+/*===== Map =====*/
+
+#map {
+  width: 100%;
+  position: relative;
+  padding-bottom: 56%;
+  height: 0px;
+  overflow: hidden;
+  background-color: #FFCC66;
+}
+
+.map-container{
+  width: 98%;
+  margin: 0px auto;
+}
+
+
+#map iframe{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+/*===== Contact Styles=====*/
+
+#contact_form {
+  text-align: center;
+  background-color: #97783A;
+  width: 70%;
+  float: left;
+  height: 300px;
+}
+
+.address {
+  float: left;
+  width: 30%;
+  height: 300px;
+  background-color: #97783A;
+  text-align: left;
+  font-size: 1.5em;
+  font-weight: bold;
+}
 
 /*===== Footer Styles=====*/
 
 #footer {
-  background-color: #000;
+  background-color: #5D4330;
   height: 125px;
+  width: 100%;
+  float: left;
 }
 
 .media-icons {
