--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ h5 {
 
 #banner{
   height: 300px;
-  background: url("../img/lake.jpg") center;
+  background: url("../img/farmland.jpeg") center;
   background-size: cover;
   color: #fff;
   background-attachment: fixed;
@@ -117,7 +117,7 @@ h5 {
 #banner h1{
   padding: 100px 0px;
   text-align: center;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 
@@ -207,7 +207,7 @@ h5 {
   width: 50%;
   float: left;
   margin-top: 46px;
-  border: 1px dashed #000;
+  border: 2px dashed #000;
   padding: 20px;
   color: #000;
 }
@@ -261,6 +261,10 @@ h5 {
   text-align: left;
   font-size: 1.5em;
   font-weight: bold;
+}
+
+.color {
+  color: #000;
 }
 
 /*===== Footer Styles=====*/
